ready for modal evaluation

--- a/notebook/mongoDBdemo.ipynb
+++ b/notebook/mongoDBdemo.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "DB_NAME = \"Proj1\"\n",
     "COLLECTION_NAME = \"Proj1-data\"\n",
-    "CONNECTION_URL = \"mongodb+srv://vairaibhav922:lf9WAVOJDQa5OPfI@cluster11.7zk31.mongodb.net/?retryWrites=true&w=majority&appName=Cluster11?\""
+    "CONNECTION_URL = \"#?\""
    ]
   },
   {
